shinyproxy-base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shinyproxy
spec:
  to:
    kind: Service
    name: shinyproxy
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
